--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,55 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media only screen and (max-width: 1200px) {
+  #masthead{
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  body{
+    margin: 0;
+  }
+  .main-section{
+    margin: 0 20px 20px;
+    width: auto;
+    max-width: 700px;
+  }
+}
+
+@media only screen and (max-width: 979px) {
+  #masthead{
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  body{
+    margin: 0;
+  }
+  .main-section{
+    margin: 0 20px 20px;
+    width: auto;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #logo {
+    width: 100%;
+    /* margin: 0; */
+  }  
+  nav{
+    float: none;
+    margin-left: 25%;
+  }
+   #masthead{
+    /* margin: 0; */
+    top: -30px;
+    padding-right: 0;
+  }
+  body{
+    margin: 0;
+  }
+  .main-section{
+    margin: 0 20px 20px;
+    width: auto;
+  }
+}
